--- a/OscarWinners.ipynb
+++ b/OscarWinners.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4    Sadie Thompson   False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Oscar_group=Oscar_df.groupby('film')\n",
+    "OscarCount = Oscar_group.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>film</th>\n",
+       "      <th>year_film</th>\n",
+       "      <th>year_ceremony</th>\n",
+       "      <th>ceremony</th>\n",
+       "      <th>category</th>\n",
+       "      <th>name</th>\n",
+       "      <th>winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$1,000 a Minute</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'38'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>'Crocodile' Dundee</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>'Round Midnight</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(A) Torzija [(A) Torsion]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        film  year_film  year_ceremony  ceremony  category  \\\n",
+       "0            $1,000 a Minute          1              1         1         1   \n",
+       "1                       '38'          1              1         1         1   \n",
+       "2         'Crocodile' Dundee          1              1         1         1   \n",
+       "3            'Round Midnight          2              2         2         2   \n",
+       "4  (A) Torzija [(A) Torsion]          1              1         1         1   \n",
+       "\n",
+       "   name  winner  \n",
+       "0     1       1  \n",
+       "1     1       1  \n",
+       "2     1       1  \n",
+       "3     2       2  \n",
+       "4     1       1  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Oscar_reset=OscarCount.reset_index()\n",
+    "Oscar_reset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>film</th>\n",
+       "      <th>oscar_nominations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$1,000 a Minute</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'38'</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>'Crocodile' Dundee</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>'Round Midnight</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(A) Torzija [(A) Torsion]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4828</th>\n",
+       "      <td>the end</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4829</th>\n",
+       "      <td>tom thumb</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4830</th>\n",
+       "      <td>À Nous la Liberté</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4831</th>\n",
+       "      <td>Ådalen '31</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4832</th>\n",
+       "      <td>Éramos Pocos (One Too Many)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4833 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             film  oscar_nominations\n",
+       "0                 $1,000 a Minute                  1\n",
+       "1                            '38'                  1\n",
+       "2              'Crocodile' Dundee                  1\n",
+       "3                 'Round Midnight                  2\n",
+       "4       (A) Torzija [(A) Torsion]                  1\n",
+       "...                           ...                ...\n",
+       "4828                      the end                  1\n",
+       "4829                    tom thumb                  1\n",
+       "4830            À Nous la Liberté                  1\n",
+       "4831                   Ådalen '31                  1\n",
+       "4832  Éramos Pocos (One Too Many)                  1\n",
+       "\n",
+       "[4833 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OscarID = Oscar_reset[['film','year_film']]\n",
+    "OscarID = OscarID.rename(columns={\"year_film\":\"oscar_nominations\"})\n",
+    "OscarID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +478,7 @@
        "ACTRESS          1927       Gloria Swanson    Sadie Thompson   False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +649,7 @@
        "[1250 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +716,7 @@
        "BEST PICTURE          1962  Sam Spiegel, Producer  Lawrence of Arabia    True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +883,7 @@
        "[1250 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +917,7 @@
        "['oscars']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +1019,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1245</th>\n",
+       "      <th>2495</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Isabelle Adjani</td>\n",
@@ -782,7 +1027,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1246</th>\n",
+       "      <th>2496</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Ann-Margret</td>\n",
@@ -790,7 +1035,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1247</th>\n",
+       "      <th>2497</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Louise Fletcher</td>\n",
@@ -798,7 +1043,7 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1248</th>\n",
+       "      <th>2498</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Glenda Jackson</td>\n",
@@ -806,7 +1051,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1249</th>\n",
+       "      <th>2499</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Carol Kane</td>\n",
@@ -815,7 +1060,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1250 rows × 5 columns</p>\n",
+       "<p>2500 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -826,11 +1071,11 @@
        "3     BEST PICTURE          1962   Aaron Rosenberg, Producer   \n",
        "4     BEST PICTURE          1962    Alan J. Pakula, Producer   \n",
        "...            ...           ...                         ...   \n",
-       "1245       ACTRESS          1975             Isabelle Adjani   \n",
-       "1246       ACTRESS          1975                 Ann-Margret   \n",
-       "1247       ACTRESS          1975             Louise Fletcher   \n",
-       "1248       ACTRESS          1975              Glenda Jackson   \n",
-       "1249       ACTRESS          1975                  Carol Kane   \n",
+       "2495       ACTRESS          1975             Isabelle Adjani   \n",
+       "2496       ACTRESS          1975                 Ann-Margret   \n",
+       "2497       ACTRESS          1975             Louise Fletcher   \n",
+       "2498       ACTRESS          1975              Glenda Jackson   \n",
+       "2499       ACTRESS          1975                  Carol Kane   \n",
        "\n",
        "                                 title  winner  \n",
        "0                   Lawrence of Arabia    True  \n",
@@ -839,16 +1084,16 @@
        "3                 Mutiny on the Bounty   False  \n",
        "4                To Kill a Mockingbird   False  \n",
        "...                                ...     ...  \n",
-       "1245             The Story of Adele H.   False  \n",
-       "1246                             Tommy   False  \n",
-       "1247   One Flew over the Cuckoo's Nest    True  \n",
-       "1248                             Hedda   False  \n",
-       "1249                     Hester Street   False  \n",
+       "2495             The Story of Adele H.   False  \n",
+       "2496                             Tommy   False  \n",
+       "2497   One Flew over the Cuckoo's Nest    True  \n",
+       "2498                             Hedda   False  \n",
+       "2499                     Hester Street   False  \n",
        "\n",
-       "[1250 rows x 5 columns]"
+       "[2500 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,6 +1101,176 @@
    "source": [
     "#Confirm successful upload\n",
     "pd.read_sql_query('select * from oscars', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rds_connection_str = \"postgres:postgres@localhost:5432/ETL_Project\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_str}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['oscars', 'oscarindex']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Verify\n",
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OscarID.to_sql(name='oscarindex', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>film</th>\n",
+       "      <th>oscar_nominations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>$1,000 a Minute</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>'38'</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>'Crocodile' Dundee</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>'Round Midnight</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>(A) Torzija [(A) Torsion]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4828</th>\n",
+       "      <td>4829</td>\n",
+       "      <td>the end</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4829</th>\n",
+       "      <td>4830</td>\n",
+       "      <td>tom thumb</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4830</th>\n",
+       "      <td>4831</td>\n",
+       "      <td>À Nous la Liberté</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4831</th>\n",
+       "      <td>4832</td>\n",
+       "      <td>Ådalen '31</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4832</th>\n",
+       "      <td>4833</td>\n",
+       "      <td>Éramos Pocos (One Too Many)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4833 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                         film  oscar_nominations\n",
+       "0        1              $1,000 a Minute                  1\n",
+       "1        2                         '38'                  1\n",
+       "2        3           'Crocodile' Dundee                  1\n",
+       "3        4              'Round Midnight                  2\n",
+       "4        5    (A) Torzija [(A) Torsion]                  1\n",
+       "...    ...                          ...                ...\n",
+       "4828  4829                      the end                  1\n",
+       "4829  4830                    tom thumb                  1\n",
+       "4830  4831            À Nous la Liberté                  1\n",
+       "4831  4832                   Ådalen '31                  1\n",
+       "4832  4833  Éramos Pocos (One Too Many)                  1\n",
+       "\n",
+       "[4833 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Confirm successful upload\n",
+    "pd.read_sql_query('select * from oscarindex', con=engine)"
    ]
   },
   {
