--- a/OscarWinners.ipynb
+++ b/OscarWinners.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4     1       1  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[4833 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "ACTRESS          1927       Gloria Swanson    Sadie Thompson   False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "[1250 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "BEST PICTURE          1962  Sam Spiegel, Producer  Lawrence of Arabia    True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        "[1250 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,16 +908,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['oscars']"
+       "['oscars', 'oscarindex']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2495</th>\n",
+       "      <th>1245</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Isabelle Adjani</td>\n",
@@ -1027,7 +1027,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2496</th>\n",
+       "      <th>1246</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Ann-Margret</td>\n",
@@ -1035,7 +1035,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2497</th>\n",
+       "      <th>1247</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Louise Fletcher</td>\n",
@@ -1043,7 +1043,7 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2498</th>\n",
+       "      <th>1248</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Glenda Jackson</td>\n",
@@ -1051,7 +1051,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2499</th>\n",
+       "      <th>1249</th>\n",
        "      <td>ACTRESS</td>\n",
        "      <td>1975</td>\n",
        "      <td>Carol Kane</td>\n",
@@ -1060,7 +1060,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2500 rows × 5 columns</p>\n",
+       "<p>1250 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1071,11 +1071,11 @@
        "3     BEST PICTURE          1962   Aaron Rosenberg, Producer   \n",
        "4     BEST PICTURE          1962    Alan J. Pakula, Producer   \n",
        "...            ...           ...                         ...   \n",
-       "2495       ACTRESS          1975             Isabelle Adjani   \n",
-       "2496       ACTRESS          1975                 Ann-Margret   \n",
-       "2497       ACTRESS          1975             Louise Fletcher   \n",
-       "2498       ACTRESS          1975              Glenda Jackson   \n",
-       "2499       ACTRESS          1975                  Carol Kane   \n",
+       "1245       ACTRESS          1975             Isabelle Adjani   \n",
+       "1246       ACTRESS          1975                 Ann-Margret   \n",
+       "1247       ACTRESS          1975             Louise Fletcher   \n",
+       "1248       ACTRESS          1975              Glenda Jackson   \n",
+       "1249       ACTRESS          1975                  Carol Kane   \n",
        "\n",
        "                                 title  winner  \n",
        "0                   Lawrence of Arabia    True  \n",
@@ -1084,16 +1084,16 @@
        "3                 Mutiny on the Bounty   False  \n",
        "4                To Kill a Mockingbird   False  \n",
        "...                                ...     ...  \n",
-       "2495             The Story of Adele H.   False  \n",
-       "2496                             Tommy   False  \n",
-       "2497   One Flew over the Cuckoo's Nest    True  \n",
-       "2498                             Hedda   False  \n",
-       "2499                     Hester Street   False  \n",
+       "1245             The Story of Adele H.   False  \n",
+       "1246                             Tommy   False  \n",
+       "1247   One Flew over the Cuckoo's Nest    True  \n",
+       "1248                             Hedda   False  \n",
+       "1249                     Hester Street   False  \n",
        "\n",
-       "[2500 rows x 5 columns]"
+       "[1250 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
        "['oscars', 'oscarindex']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "[4833 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
